--- a/index.html
+++ b/index.html
@@ -4,103 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>login</title>
+    <link rel="stylesheet" href="/login-form/css/style.css">
 </head>
-
 <body>
-    <main>
-        <div class="left">
-            <div class="null">
-                logo
+    <div class="main-container">
+        <h1>Employee Management System</h1>
+        <form action="" method="get">
+            <label for="">Please Log-In according to your role!!</label>
+            <div class="button">
+                <button><a href="employee.html">Log-In as Employee</a></button>
+                <button><a href="admin.html">Log-In as Admin</a></button>
             </div>
-            <div class="menus">
-                <ul>
-                    <li><i class="fa-solid fa-house"></i><a href="">Dashboard</a></li>
-                    <li><i class="fa-solid fa-id-card"></i><a href="">Employee</a></li>
-                    <li><i class="fa-solid fa-id-card"></i><a href="">Admin</a></li>
-                    <li><i class="fa-solid fa-bars-progress"></i><a href="">Manage employee leave</a></li>
-                    <li><i class="fa-solid fa-right-from-bracket"></i><a href="">Log out</a></li>
-                    <li><i class="fa-solid fa-user"></i><a href="">Profile</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="right">
-            <header>
-                <div class="bar"><i class="fa-solid fa-bars"></i></div>
-                <h1>Employee Management System</h1>
-            </header>
-
-            <div class="totalMember">
-                <div class="box">
-                    <h4>Admin</h4>
-                    <hr>
-                    <p>Total admin: <span>2</span></p>
-                    <hr>
-                    <a href="">View all admins</a>
-                </div>
-                <div class="box">
-                    <h4>Employee</h4>
-                    <hr>
-                    <p>Total employees: <span>2</span></p>
-                    <hr>
-                    <a href="">View all admins</a>
-                </div>
-                <div class="box">
-                    <h4>Employees on leave (daily wise)</h4>
-                    <hr>
-                    <p>Total admin: <span>2</span></p>
-                    <hr>
-                    <a href="">View all admins</a>
-                </div>
-            </div>
-
-            <div class="leadership">
-                <h1>Employee leadership board</h1>
-                <table>
-                    <tr>
-                        <th>S.No.</th>
-                        <th>Employees's ID</th>
-                        <th>Employees's name</th>
-                        <th>Employees's email</th>
-                        <th>Salary in Rs.</th>
-                    </tr>
-                    <tr>
-                        <td>hello</td>
-                        <td>hello</td>
-                        <td>hello</td>
-                        <td>hello</td>
-                        <td>hello</td>
-                    </tr>
-                    <tr>
-                        <td>accs</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                    </tr>
-                    <tr>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                    </tr>
-                    <tr>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                        <td>employee</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </main>
-
-    <script src="script.js"></script>
+        </form>
+    </div>
 </body>
-
 </html>
