--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="/login-form/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="main-container">
@@ -13,8 +13,8 @@
         <form action="" method="get">
             <label for="">Please Log-In according to your role!!</label>
             <div class="button">
-                <button><a href="employee.html">Log-In as Employee</a></button>
-                <button><a href="admin.html">Log-In as Admin</a></button>
+                <button><a href="/login-form/employeeForm.html">Log-In as Employee</a></button>
+                <button><a href="/login-form/adminForm.html">Log-In as Admin</a></button>
             </div>
         </form>
     </div>
