--- a/login-form/employeeForm.html
+++ b/login-form/employeeForm.html
@@ -18,7 +18,7 @@
             <h1>Hello, Employee</h1>
         </div>
         
-        <form action="" method="get">
+        <form action="/dashboard/employee.html" method="get">
             <label for="email">Email:</label>
             <input type="email">
             <label for="password">Password:</label>
