--- a/dashboard/employee.html
+++ b/dashboard/employee.html
@@ -18,7 +18,7 @@
                     <li><a href=""><i class="fa-solid fa-bars-progress"></i>Leave Status</a></li>
                     <li><a href=""><i class="fa-solid fa-paper-plane"></i>Apply for Leave</a></li>
                     <li><a href=""><i class="fa-solid fa-list"></i>View All Employees</a></li>
-                    <li><a href="login-form/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
+                    <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
                     <li><a href=""><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
         </div>
