--- a/dashboard/admin.html
+++ b/dashboard/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="/css/dashboard.css">
 </head>
 
 <body>
@@ -18,8 +18,8 @@
                     <li><a href=""><i class="fa-solid fa-house"></i>Dashboard</a></li>
                     <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Employee</a>
                         <ul class="drop">
-                            <li class="droplist"><a href="#"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
-                            <li class="droplist"><a href="#"><i class="fa-solid fa-bars-progress"></i>Manage Employee</a></li>
+                            <li class="droplist"><a href="/dashboard/adminView/addEmployee.html"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
+                            <li class="droplist"><a href="/dashboard/adminView/manageEmployee.html"><i class="fa-solid fa-bars-progress"></i>Manage Employee</a></li>
                         </ul>
                     </li>
                     <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Admin</a>
