--- a/dashboard/adminView/addEmployee.html
+++ b/dashboard/adminView/addEmployee.html
@@ -17,7 +17,7 @@
             <div class="null"></div>
 
             <nav class="menus">
-                <li><a href=""><i class="fa-solid fa-house"></i>Dashboard</a></li>
+                <li><a href="admin.html"><i class="fa-solid fa-house"></i>Dashboard</a></li>
                 <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Employee</a>
                     <ul class="drop">
                         <li class="droplist"><a href="/dashboard/adminView/addEmployee.html"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
