--- a/dashboard/employeeView/employee.html
+++ b/dashboard/employeeView/employee.html
@@ -14,10 +14,10 @@
         <div class="left">
             <div class="null"></div>
             <nav class="menus">
-                    <li><a href=""><i class="fa-solid fa-house"></i>Dashboard</a></li>
-                    <li><a href=""><i class="fa-solid fa-bars-progress"></i>Leave Status</a></li>
-                    <li><a href=""><i class="fa-solid fa-paper-plane"></i>Apply for Leave</a></li>
-                    <li><a href=""><i class="fa-solid fa-list"></i>View All Employees</a></li>
+                    <li><a href="employee.html"><i class="fa-solid fa-house"></i>Dashboard</a></li>
+                    <li><a href="leave-status.html"><i class="fa-solid fa-bars-progress"></i>Leave Status</a></li>
+                    <li><a href="apply-for-leave.html"><i class="fa-solid fa-paper-plane"></i>Apply for Leave</a></li>
+                    <li><a href="view-all-employee.html"><i class="fa-solid fa-list"></i>View All Employees</a></li>
                     <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
                     <li><a href=""><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
