--- a/dashboard/adminView/addAdmin.html
+++ b/dashboard/adminView/addAdmin.html
@@ -44,7 +44,7 @@
             </header>
             <div class="form-container">
                 <form action="" method="post">
-                    <h3>add new employee</h3>
+                    <h3>add new admin</h3>
 
                     <div class="user-input">
                         <label for="name">Full name</label>
@@ -56,11 +56,6 @@
                         <input type="email" name="email" placeholder="Email address" required>
                         <label for="password">Password</label>
                         <input type="password" name="password" placeholder="Password">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="salary">Salary</label>
-                        <input type="number" name="salary" placeholder="Salary">
                     </div>
 
                     <div class="user-input">
