--- a/dashboard/adminView/admin.html
+++ b/dashboard/adminView/admin.html
@@ -15,20 +15,20 @@
             <div class="null"></div>
 
             <nav class="menus">
-                    <li><a href=""><i class="fa-solid fa-house"></i>Dashboard</a></li>
+                    <li><a href="admin.html"><i class="fa-solid fa-house"></i>Dashboard</a></li>
                     <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Employee</a>
                         <ul class="drop">
-                            <li class="droplist"><a href="/dashboard/adminView/addEmployee.html"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
-                            <li class="droplist"><a href="/dashboard/adminView/manageEmployee.html"><i class="fa-solid fa-bars-progress"></i>Manage Employee</a></li>
+                            <li class="droplist"><a href="addEmployee.html"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
+                            <li class="droplist"><a href="manageEmployee.html"><i class="fa-solid fa-bars-progress"></i>Manage Employee</a></li>
                         </ul>
                     </li>
                     <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Admin</a>
                         <ul class="drop">
-                            <li class="droplist"><a href="#"><i class="fa-solid fa-circle-plus"></i>Add Admin</a></li>
-                            <li class="droplist"><a href="#"><i class="fa-solid fa-bars-progress"></i>Manage Admin</a></li>
+                            <li class="droplist"><a href="addAdmin.html"><i class="fa-solid fa-circle-plus"></i>Add Admin</a></li>
+                            <li class="droplist"><a href="manageAdmin.html"><i class="fa-solid fa-bars-progress"></i>Manage Admin</a></li>
                         </ul>
                     </li>
-                    <li><a href=""><i class="fa-solid fa-bars-progress"></i>Manage employee leave</a></li>
+                    <li><a href="manageLeave.html"><i class="fa-solid fa-bars-progress"></i>Manage employee leave</a></li>
                     <li></i><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
                     <li><a href=""><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
@@ -116,7 +116,7 @@
 
      <!-- footer  -->
         <footer class="sitefooter">
-            <small>Copyright &copy; Designed & Developed by <span>Bikash/Sadip</span> 2024.</small>
+            <small>Copyright &copy; Designed & Developed by <span>Surya/Swoxchhanda</span> 2024.</small>
         </footer>
     <!-- footer  -->
 
