--- a/dashboard/adminView/manageEmployee.html
+++ b/dashboard/adminView/manageEmployee.html
@@ -17,21 +17,21 @@
             <div class="null"></div>
 
             <nav class="menus">
-                <li><a href=""><i class="fa-solid fa-house"></i>Dashboard</a></li>
+                <li><a href="admin.html"><i class="fa-solid fa-house"></i>Dashboard</a></li>
                 <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Employee</a>
                     <ul class="drop">
-                        <li class="droplist"><a href="/dashboard/adminView/addEmployee.html"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
-                        <li class="droplist"><a href="/dashboard/adminView/manageEmployee.html"><i class="fa-solid fa-bars-progress"></i>Manage Employee</a>
+                        <li class="droplist"><a href="addEmployee.html"><i class="fa-solid fa-circle-plus"></i>Add Employee</a></li>
+                        <li class="droplist"><a href="manageEmployee.html"><i class="fa-solid fa-bars-progress"></i>Manage Employee</a>
                         </li>
                     </ul>
                 </li>
                 <li class="parent"><a href=""><i class="fa-solid fa-id-card" id="click"></i>Admin</a>
                     <ul class="drop">
-                        <li class="droplist"><a href="#"><i class="fa-solid fa-circle-plus"></i>Add Admin</a></li>
-                        <li class="droplist"><a href="#"><i class="fa-solid fa-bars-progress"></i>Manage Admin</a></li>
+                        <li class="droplist"><a href="addAdmin.html"><i class="fa-solid fa-circle-plus"></i>Add Admin</a></li>
+                        <li class="droplist"><a href="manageAdmin.html"><i class="fa-solid fa-bars-progress"></i>Manage Admin</a></li>
                     </ul>
                 </li>
-                <li><a href=""><i class="fa-solid fa-bars-progress"></i>Manage employee leave</a></li>
+                <li><a href="manageLeave.html"><i class="fa-solid fa-bars-progress"></i>Manage employee leave</a></li>
                 <li></i><a href="login-form/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
                 <li><a href=""><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
@@ -64,7 +64,7 @@
                             <td>hello</td>
                             <td>hello</td>
                             <td>hello</td>
-                            <td>hello</td>
+                            <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
                         </tr>
                         <tr>
                             <td>accs</td>
@@ -74,7 +74,7 @@
                             <td>employee</td>
                             <td>employee</td>
                             <td>employee</td>
-                            <td>employee</td>
+                            <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
                         </tr>
                         <tr>
                             <td>employee</td>
@@ -84,7 +84,7 @@
                             <td>employee</td>
                             <td>employee</td>
                             <td>employee</td>
-                            <td>employee</td>
+                            <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
                         </tr>
                         <tr>
                             <td>employee</td>
@@ -94,7 +94,7 @@
                             <td>employee</td>
                             <td>employee</td>
                             <td>employee</td>
-                            <td>employee</td>
+                            <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
                         </tr>
                     </table>
                 </div>
@@ -105,7 +105,7 @@
 
     <!-- footer  -->
     <footer class="sitefooter">
-        <small>Copyright &copy; Designed & Developed by <span>Bikash/Sadip</span> 2024.</small>
+        <small>Copyright &copy; Designed & Developed by <span>Surya/Swoxchhanda</span> 2024.</small>
     </footer>
     <!-- footer  -->
 
