--- a/dashboard/adminView/manageLeave.html
+++ b/dashboard/adminView/manageLeave.html
@@ -42,42 +42,31 @@
                 <div class="bar"><i class="fa-solid fa-bars"></i></div>
                 <h1>Employee Management System</h1>
             </header>
-            <div class="form-container">
-                <form action="" method="post">
-                    <h3>add new employee</h3>
-
-                    <div class="user-input">
-                        <label for="name">Full name</label>
-                        <input type="text" name="name" placeholder="Full name">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" placeholder="Email address" required>
-                        <label for="password">Password</label>
-                        <input type="password" name="password" placeholder="Password">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="salary">Salary</label>
-                        <input type="number" name="salary" placeholder="Salary">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="DOB">Date of birth</label>
-                        <input type="date" name="DOB">
-                    </div>
-
-                    <div class="gender">
-                        <label for="gender">Gender:</label>
-                        <input type="radio"><label for="male">Male</label>
-                        <input type="radio"><label for="male">Male</label>
-                    </div>
-
-                    <div class="button">
-                        <button type="submit">Add</button>
-                    </div>
-                </form>
+            <div class="employee-container">
+                <div class="leadership">
+                    <h3>Manage Employees</h3>
+                    <table>
+                        <tr>
+                            <th>S.No.</th>
+                            <th>Employee email</th>
+                            <th>Starting date</th>
+                            <th>Ending date</th>
+                            <th>Total days</th>
+                            <th>Reason</th>
+                            <th>Status</th>
+                        </tr>
+                        <tr>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td class="buttons"><button>Accept</button><button>Reject</button></td>
+                        </tr>
+                       
+                    </table>
+                </div>
             </div>
 
         </div>
