--- a/dashboard/employeeView/employee.html
+++ b/dashboard/employeeView/employee.html
@@ -107,7 +107,7 @@
 
     <!-- footer  -->
     <footer class="sitefooter">
-        <small>Copyright &copy; Designed & Developed by <span>Bikash/Sadip</span> 2024.</small>
+        <small>Copyright &copy; Designed & Developed by <span>Surya/Swoxchhanda</span> 2024.</small>
     </footer>
 <!-- footer  -->
 
