--- a/login-form/adminForm.html
+++ b/login-form/adminForm.html
@@ -18,7 +18,7 @@
                 <h1>Hello, Admin</h1>
             </div>
         
-            <form action="/dashboard/admin.html" method="get">
+            <form action="/dashboard/adminView/admin.html" method="get">
                 <label for="email">Email:</label>
                 <input type="email">
                 <label for="password">Password:</label>
