--- a/dashboard/adminView/manageAdmin.html
+++ b/dashboard/adminView/manageAdmin.html
@@ -42,42 +42,43 @@
                 <div class="bar"><i class="fa-solid fa-bars"></i></div>
                 <h1>Employee Management System</h1>
             </header>
-            <div class="form-container">
-                <form action="" method="post">
-                    <h3>add new employee</h3>
-
-                    <div class="user-input">
-                        <label for="name">Full name</label>
-                        <input type="text" name="name" placeholder="Full name">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" placeholder="Email address" required>
-                        <label for="password">Password</label>
-                        <input type="password" name="password" placeholder="Password">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="salary">Salary</label>
-                        <input type="number" name="salary" placeholder="Salary">
-                    </div>
-
-                    <div class="user-input">
-                        <label for="DOB">Date of birth</label>
-                        <input type="date" name="DOB">
-                    </div>
-
-                    <div class="gender">
-                        <label for="gender">Gender:</label>
-                        <input type="radio"><label for="male">Male</label>
-                        <input type="radio"><label for="male">Male</label>
-                    </div>
-
-                    <div class="button">
-                        <button type="submit">Add</button>
-                    </div>
-                </form>
+            <div class="employee-container">
+                <div class="leadership">
+                    <h3>Manage Admin</h3>
+                    <table>
+                        <tr>
+                            <th>S.No.</th>
+                            <th>ID</th>
+                            <th>name</th>
+                            <th>email</th>
+                            <th>Date of birth</th>
+                            <th>Age in years</th>
+                            <th>Salary in Rs</th>
+                            <th>Action</th>
+                        </tr>
+                        <tr>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td>hello</td>
+                            <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
+                        </tr>
+                        <tr>
+                            <td>accs</td>
+                            <td>employee</td>
+                            <td>employee</td>
+                            <td>employee</td>
+                            <td>employee</td>
+                            <td>employee</td>
+                            <td>employee</td>
+                            <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
+                        </tr>
+                
+                    </table>
+                </div>
             </div>
 
         </div>
