--- a/dashboard/adminView/profile.html
+++ b/dashboard/adminView/profile.html
@@ -35,7 +35,7 @@
 
     <!-- footer  -->
     <footer class="sitefooter">
-        <small>Copyright &copy; Designed & Developed by <span>Bikash/Sadip</span> 2024.</small>
+        <small>Copyright &copy; Designed & Developed by <span>Surya/Swoxchhanda</span> 2024.</small>
     </footer>
 <!-- footer  -->
 
