--- a/dashboard/adminView/manageAdmin.html
+++ b/dashboard/adminView/manageAdmin.html
@@ -33,7 +33,7 @@
                 </li>
                 <li><a href="manageLeave.html"><i class="fa-solid fa-bars-progress"></i>Manage employee leave</a></li>
                 <li></i><a href="login-form/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
-                <li><a href=""><i class="fa-solid fa-user"></i>Profile</a></li>
+                <li><a href="profileadmin.html"><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
         </div>
 
@@ -46,17 +46,17 @@
                 <div class="leadership">
                     <h3>Manage Admin</h3>
                     <table>
-                        <tr>
+                        <tr class="tbl-row">
                             <th>S.No.</th>
                             <th>ID</th>
-                            <th>name</th>
-                            <th>email</th>
+                            <th>Name</th>
+                            <th>Email</th>
                             <th>Date of birth</th>
                             <th>Age in years</th>
                             <th>Salary in Rs</th>
                             <th>Action</th>
                         </tr>
-                        <tr>
+                        <tr class="tbl-row">
                             <td>hello</td>
                             <td>hello</td>
                             <td>hello</td>
@@ -66,7 +66,7 @@
                             <td>hello</td>
                             <td><i class="fa-solid fa-trash"></i><i class="fa-solid fa-pen-to-square"></i></td>
                         </tr>
-                        <tr>
+                        <tr class="tbl-row">
                             <td>accs</td>
                             <td>employee</td>
                             <td>employee</td>
