--- a/dashboard/adminView/manageLeave.html
+++ b/dashboard/adminView/manageLeave.html
@@ -33,7 +33,7 @@
                 </li>
                 <li><a href="manageLeave.html"><i class="fa-solid fa-bars-progress"></i>Manage employee leave</a></li>
                 <li></i><a href="login-form/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
-                <li><a href=""><i class="fa-solid fa-user"></i>Profile</a></li>
+                <li><a href="profileadmin.html"><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
         </div>
 
@@ -46,16 +46,16 @@
                 <div class="leadership">
                     <h3>Manage Employees</h3>
                     <table>
-                        <tr>
+                        <tr class="tbl-row">
                             <th>S.No.</th>
-                            <th>Employee email</th>
+                            <th>Employee Email</th>
                             <th>Starting date</th>
                             <th>Ending date</th>
                             <th>Total days</th>
                             <th>Reason</th>
                             <th>Status</th>
                         </tr>
-                        <tr>
+                        <tr class="tbl-row">
                             <td>hello</td>
                             <td>hello</td>
                             <td>hello</td>
