--- a/dashboard/employeeView/employee.html
+++ b/dashboard/employeeView/employee.html
@@ -19,7 +19,7 @@
                     <li><a href="apply-for-leave.html"><i class="fa-solid fa-paper-plane"></i>Apply for Leave</a></li>
                     <li><a href="view-all-employee.html"><i class="fa-solid fa-list"></i>View All Employees</a></li>
                     <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
-                    <li><a href="profile.html"><i class="fa-solid fa-user"></i>Profile</a></li>
+                    <li><a href="profile-employee.html"><i class="fa-solid fa-user"></i>Profile</a></li>
             </nav>
         </div>
 
@@ -58,7 +58,7 @@
                     <hr>
                     <p>Total Employee: <span>4</span></p>
                     <hr>
-                    <a href="">View all Employees</a>
+                    <a href="view-all-employee.html">View all Employees</a>
                 </div>
             </div>
 
