--- a/dashboard/adminView/manageAdmin.html
+++ b/dashboard/adminView/manageAdmin.html
@@ -89,7 +89,8 @@
         <small>Copyright &copy; Designed & Developed by <span>Surya/Swoxchhanda</span> 2024.</small>
     </footer>
     <!-- footer  -->
-
+    
+    <script src="/javaScript/script.js"></script>
 </body>
 
 </html>
