--- a/dashboard/adminView/profileadmin.html
+++ b/dashboard/adminView/profileadmin.html
@@ -41,6 +41,28 @@
             </header>
 
 
+            <div class="profile-container">
+                <img src="/media/blankimg.png" alt="blank-img" id="profile-pic">
+
+                <h2 class="name">ABC</h2>
+
+                <div class="profile-detail">
+                    <h4>Email: <span>xyz@xyz.com</span></h4>
+                    <h4>Gender: <span>Male</span></h4>
+                    <h4>Age: <span>20 year</span></h4>
+                    <h4>Date of Birth: <span>11th June 2003</span></h4>
+                </div>
+
+                <div class="btn">
+                    <button class="first" type="button"><a href="#">Edit Profile</a></button>
+                    <button class="first" type="button"><a href="#">Change Password</a></button>
+                
+                    <label for="input-file" class="third">Change Profile Photo</label>
+                    <input type="file" accept="image/jpeg, image/png, image/jpg" id="input-file">  
+                </div>
+                
+            </div>
+
         </div>
     </main>
 
@@ -50,6 +72,8 @@
         </footer>
     <!-- footer  -->
 
+
+    <script src="/javaScript/script.js"></script> 
 </body>
 
 </html>
